@@ -1,3 +1,6 @@
+* Fri Apr 10 2020 Trevor Vaughan <tvaughan@onyxpoint.com> 6.4.1-0
+- Remove overrides for aide::aliases on EL8 since it works properly in FIPS mode
+
 * Wed Feb 12 2020 Alexander Fisher <alex@linfratech.co.uk> 6.4.1-0
 - Fix badge URLs in README
 
